# cpp_projects

./: .gitignore
cmake_minimalist_structure/: CMakeLists.txt
cmake_minimalist_structure/src/: CMakeLists.txt  demo.cpp
cmake_minimalist_structure/src/utils/: CMakeLists.txt  StringUtils.cpp
cmake_minimalist_structure/src/utils/include/: StringUtils.hpp
cmake_minimalist_structure/test/: CMakeLists.txt
cmake_minimalist_structure/test/utils/: CMakeLists.txt  TestStringUtils.cpp
cpp_lab/: CMakeLists.txt
cpp_lab/src/build_time_cmd_demo/: CMakeLists.txt  build-time-command-demo.cpp
cpp_lab/src/build_time_cmd_demo/build-time-script/: generate_header.py
cpp_lab/src/build_time_cmd_demo/include/: MyClass.h
cpp_lab/src/cpp_language/: CMakeLists.txt
cpp_lab/src/cpp_language/src/: shared_pointer.cpp
leetcode/: CMakeLists.txt
leetcode/src/: main.cpp
leetcode/src/solution_2873/: CMakeLists.txt  solution_2873.cpp  solution_2873.h
leetcode/test/: CMakeLists.txt  test_0000.cpp  test_2873.cpp
